Menu displays correctly on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,9 +6,9 @@
 }
 
 @font-face {
-    font-family: 'Titillium';
-    src: url('../fonts/titillium-bold-webfont.woff') format('woff');
-    font-weight: bold;
+  font-family: 'Titillium';
+  src: url('../fonts/titillium-bold-webfont.woff') format('woff');
+  font-weight: bold;
 }
 
 $white: #f5f5f5;
@@ -17,6 +17,8 @@ $gray: #5a635d;
 $mainColor: #5ea57a;
 
 $bodyFont: "Titillium","Segoe UI",Helvetica,Arial,sans-serif;
+
+$mobile-breakpoint: 768px;
 
 html, body {
   width: 100%;
@@ -47,7 +49,6 @@ a:hover {
   min-height: 100%;
   display: flex;
   flex-direction: row;
-  /*overflow: auto;*/
   align-items: stretch;
 }
 
@@ -100,6 +101,33 @@ a:hover {
 
 .sidebar-socials img {
   max-width: 24px;
+}
+
+// on mobile...
+@media screen and (max-width: $mobile-breakpoint) {
+  .container {
+    flex-direction: column;
+    max-width: 100%;
+  }
+  .content {
+    position: static;
+    max-width: 100%;
+    padding: 0.25rem;
+  }
+  .sidebar {
+    padding: 0.25rem 1rem;
+    min-width: 100%;
+    height: auto;
+    text-align: center;
+    position: static;
+  }
+  .sidebar-links {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
 
 .content {
